--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This program is written in Assembly. It adds two floating point numbers and displays the result in floating point and binary format.
+This program is written in Assembly. It adds two floating point numbers and displays the result
+in floating point and binary format.
