--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This program is written in Assembly. It adds two floating point numbers and displays the result
+This program is written in Sparc Assembly. It adds two floating point numbers and displays the result
 in floating point and binary format.
