--- a/README
+++ b/README
@@ -1,2 +1,3 @@
+SCHOOL ASSIGNMENT
 This program is written in Sparc Assembly. It adds two floating point numbers and displays the result
 in floating point and binary format.
